# picamserver

./: .gitignore  Makefile  README.md  __init__.py  camdaemon.py  config.py  forever.sh  main.py  pyproject.toml  run.sh  run_cam.sh  run_flask.sh
templates/: index.html
