[project]
name = "picamserver"
version = "0.2.0"
description = "Provide a web interface to Pi IO"
dependencies = []

[project.optional-dependencies]
dev = [
	"ruff",
	"pep8-naming",
	"mypy",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = [
	# Ignore typing for args and kwargs
	"ANN002",
	"ANN003",

 	# Don't use numpy documentation style
	"D406",
	"D407",

	# Project uses a newer version of Python that doesnt need this.
	"FA102",

	"G004", # f-strings are encouraged in logging statements.
	"RET504", # Support preceding variable assignments for clarity
	"SIM108", # No ternaries.
	"UP015", # Allow redundant open modes for explicitness.
]

[tool.ruff.pydocstyle]
convention = "google"
